<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="nano_degree_apps_title">My Nanodegree Apps</string>
    <string name="spoitfy_streamer">Spotify Streamer (Popular Movies)</string>
    <string name="football_scores_app">Football Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="button_toast">This button will launch my </string>
    <string name="action_settings">something here</string>
    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="mark_as_favorite">Mark as \nFavorite</string>
    <string name="trailers">Trailers:</string>
    <string name="pop_movies">Pop Movies</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="sort_by_rating">Sort By Highest Rating</string>
    <string name="action_setting">Select sorting type</string>
    <string name="no_trailers">NO TRAILERS AVAILABLE</string>
</resources>
