<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".popular_movies.ui.MovieDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movie_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_150"
            android:background="@color/green_009688"
            android:gravity="center_vertical"
            android:padding="@dimen/size_20"
            android:textColor="@color/white"
            android:textSize="@dimen/font_45"/>

        <requestFocus/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_backdrop_image_view"
                android:layout_width="@dimen/size_150"
                android:layout_height="@dimen/size_250"
                android:layout_margin="@dimen/size_20"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/release_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_20"
                android:layout_marginStart="@dimen/size_20"
                android:layout_marginTop="@dimen/size_20"
                android:layout_toEndOf="@+id/movie_backdrop_image_view"
                android:layout_toRightOf="@+id/movie_backdrop_image_view"
                android:textColor="@color/grey_747474"
                android:textSize="@dimen/font_30"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/movie_duration_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/release_year_text_view"
                android:layout_alignStart="@+id/release_year_text_view"
                android:layout_below="@+id/release_year_text_view"
                android:layout_marginTop="@dimen/size_10"
                android:layout_toEndOf="@+id/movie_backdrop_image_view"
                android:layout_toRightOf="@+id/movie_backdrop_image_view"
                android:textColor="@color/grey_747474"
                android:textSize="@dimen/font_30"
                android:textStyle="italic|bold"/>

            <TextView
                android:id="@+id/movie_rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/release_year_text_view"
                android:layout_alignStart="@+id/release_year_text_view"
                android:layout_below="@+id/movie_duration_text_view"
                android:layout_marginTop="@dimen/size_10"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/release_year_text_view"
                android:layout_alignStart="@+id/release_year_text_view"
                android:layout_below="@+id/movie_rating_text_view"
                android:layout_marginTop="@dimen/size_10"
                android:background="@color/blue_86E4DB"
                android:text="@string/mark_as_favorite"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/movie_detail_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10"
            android:textColor="@color/grey_737373"
            android:textIsSelectable="true"
            android:textSize="@dimen/font_20"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/size_10"
            android:background="@color/grey_696666"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10"
            android:text="@string/trailers"
            android:textColor="@color/grey_737373"
            android:textSize="@dimen/font_25"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/number_of_trailers_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </LinearLayout>
</ScrollView>
